docs(java): show how to build with ErrorProne/Checker Framework
Fixes #1552.